# port-libarchive

./: .gitignore  README.md  all_cves.json  relevant_cves.json  test-original.sh  workflow.yaml
safe/: .gitignore  Cargo.toml  PORT.md  build.rs
safe/abi/: exported_symbols.txt  libarchive.map  original_exported_symbols.txt  original_version_info.txt
safe/c_shims/: archive_set_error.c
safe/c_src/tar/: write.c
safe/c_src/unzip/: bsdunzip.c
safe/config/: libarchive_test_phase_groups.json
safe/debian/: rules
safe/examples/: tarfilter.c
safe/include/: archive.h
safe/scripts/: check-abi.sh  check-i686-cve.sh  check-link-compat.sh  check-rust-test-coverage.sh  check-source-compat.sh  render-pkg-config.sh  run-upstream-c-tests.sh
safe/src/: lib.rs
safe/src/algorithms/: mod.rs
safe/src/common/: api.rs  backend.rs  error.rs  helpers.rs  panic_boundary.rs  state.rs
safe/src/disk/: mod.rs  native.rs
safe/src/entry/: api.rs  internal.rs  mod.rs
safe/src/ffi/: archive_common.rs  archive_entry.rs  archive_match.rs  archive_options.rs  archive_read.rs  archive_read_disk.rs  archive_write.rs  archive_write_disk.rs  bootstrap.rs  mod.rs
safe/tests/: advanced_formats.rs  cat.rs  cpio.rs  cve_regressions.rs  libarchive.rs  libarchive_entry_api.rs  libarchive_foundation_support.rs  libarchive_match_api.rs  libarchive_read_core.rs  libarchive_read_disk.rs  libarchive_write_core.rs  libarchive_write_disk.rs  tar.rs  unzip.rs
safe/tools/: gen_api_inventory.py  gen_link_compat_manifest.py  gen_rust_test_port_artifacts.py  gen_test_manifest.py
(+40 files in other folders)
