[package]
name = "archive"
version = "3.7.2"
edition = "2021"
build = "build.rs"

[lib]
name = "archive"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
